--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pbkdf2": "^3.0.17",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
+    "req-flash": "0.0.3",
     "sequelize": "^5.8.10"
   }
 }
